k8s/ingress.yml
# ingress-controller 설치 명령어
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.1/deploy/static/provider/aws/deploy.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  tls:
  - hosts:
    - "server.songboseok.shop" #수정 필요
    secretName: harbor-com-tls
  rules:
    - host: server.songboseok.shop # 수정 필요
      http:
        paths:
          - path: / #모든 url요청을 gateway 던
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 80
